--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+    <title>Strona internetowa</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body onload="spawnbubble();">
+    <div id="all">    
+        <div id="bubleconteiner"></div>
+        <div id="topic"><h1>Mandarynka</h1><button id="button_Clicke_Me">Click Me</button></div>
+    </div>
+
+    <script src="scripte.js"></script>
+    <script src="buble.js"></script>
 </body>
 </html>
